Fixed form content being cropped out and multi-select styles

--- a/web/sites/all/themes/evolve/lessc/Andy.less
+++ b/web/sites/all/themes/evolve/lessc/Andy.less
@@ -1089,7 +1089,7 @@ div[id^="home-tile-view-block"], div[id^="inmotioncategory-block"]{
         padding-left: 40px;
         text-align: left;
         &:before{
-            margin-left: -40px;
+            margin-left: -39px;
         }
     }
   
