--- a/web/sites/all/themes/evolve/lessc/PD/PDshopping.less
+++ b/web/sites/all/themes/evolve/lessc/PD/PDshopping.less
@@ -433,7 +433,7 @@ fieldset {
           padding-left: 40px;
           text-align: left;
             &:before{
-              margin-left: -40px;
+              margin-left: -39px;
             }
         }
       
