--- a/web/sites/all/themes/evolve/lessc/popups.less
+++ b/web/sites/all/themes/evolve/lessc/popups.less
@@ -1129,10 +1129,6 @@ div[aria-describedby="registerPDUser"].ui-dialog {
             .chevron-select-box::after{
                 top: 18px;
             }
-            div[class^="col-xs-"]{
-                padding-left: 15px!important;
-                padding-right: 15px!important;
-            }
             .none-padding{
                 margin-left: -15px;
                 margin-right: -15px;
